--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-test
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AJK</title>
+</head>
+<body style="background-color: fff2e1;">
+    <header style="width: 100%; height: 20%; background-color: ed2d5a;"></header>
+</body>
+</html>
