--- a/index.html
+++ b/index.html
@@ -2,9 +2,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="global.css">
+    <link rel="stylesheet" href="kevin.css">
+    <link rel="stylesheet" href="andrea.css">
+    <link rel="stylesheet" href="jon.css">
     <title>AJK</title>
 </head>
-<body style="background-color: fff2e1;">
-    <header style="width: 100%; height: 20%; background-color: ed2d5a;"></header>
+<body >
+
+    <nav>
+        <!-- Kevin -->
+    </nav>
+
+    <section>
+        <!-- Andrea -->
+    </section>
+
+    <footer>
+        <!-- jonathan -->
+    </footer>
+
+    
 </body>
 </html>
