--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
 
     <nav>
         <!-- Kevin -->
+         <img class="logo" src="https://cdn-icons-png.flaticon.com/512/40/40739.png" alt="" >
+         <ul>
+            <li><a href="">Top Brands</a></li>
+            <li><a href="">Discover</a></li>
+            <li><a href="">Vegan</a></li>
+            <li><a href="">Shampoo</a></li>
+            <li><a href="">Conditioner</a></li>
+            <li><a href="">Treatment</a></li>
+            <li><a href="">Leave-in</a></li>
+            <li><a href="">Styling</a></li>
+            <li><img src="https://gallery.yopriceville.com/var/albums/Free-Clipart-Pictures/Sale-Stickers-PNG/Shopping_Cart_Icon_PNG_Clipart.png?m=1629814077" alt=""></li>
+            <li><div class="busqueda"><input type="search"><img class="lupa" src="https://cdn-icons-png.flaticon.com/512/3721/3721746.png" alt=""></div></li>
+         </ul>
+
     </nav>
 
     <section>
