Fix HTML formatting and structure for improved readability

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,12 +9,13 @@
     <link rel="stylesheet" href="jon.css">
     <title>AJK</title>
 </head>
-<body >
+
+<body>
 
     <nav>
         <!-- Kevin -->
-         <img class="logo" src="https://cdn-icons-png.flaticon.com/512/40/40739.png" alt="" >
-         <ul>
+        <img class="logo" src="https://cdn-icons-png.flaticon.com/512/40/40739.png" alt="">
+        <ul>
             <li><a href="">Top Brands</a></li>
             <li><a href="">Discover</a></li>
             <li><a href="">Vegan</a></li>
@@ -22,9 +24,14 @@
             <li><a href="">Treatment</a></li>
             <li><a href="">Leave-in</a></li>
             <li><a href="">Styling</a></li>
-            <li><img src="https://gallery.yopriceville.com/var/albums/Free-Clipart-Pictures/Sale-Stickers-PNG/Shopping_Cart_Icon_PNG_Clipart.png?m=1629814077" alt=""></li>
-            <li><div class="busqueda"><input type="search"><img class="lupa" src="https://cdn-icons-png.flaticon.com/512/3721/3721746.png" alt=""></div></li>
-         </ul>
+            <li><img src="https://gallery.yopriceville.com/var/albums/Free-Clipart-Pictures/Sale-Stickers-PNG/Shopping_Cart_Icon_PNG_Clipart.png?m=1629814077" alt="">
+            </li>
+            <li>
+                <div class="busqueda">
+                    <input type="search"><img class="lupa" src="https://cdn-icons-png.flaticon.com/512/3721/3721746.png" alt="">
+                </div>
+            </li>
+        </ul>
 
     </nav>
 
@@ -36,6 +43,7 @@
         <!-- jonathan -->
     </footer>
 
-    
+
 </body>
+
 </html>
