Agrega menú desplegable y arregla bug del carrito

--- a/index.html
+++ b/index.html
@@ -15,8 +15,22 @@
     <nav>
         <!-- Kevin -->
         <img class="logo" src="https://cdn-icons-png.flaticon.com/512/40/40739.png" alt="">
-        <ul>
-            <li><a href="">Top Brands</a></li>
+        <ul class="list-nav">
+            <li class="btn-desplegable"><a href="">Top Brands</a>
+                <div class="desplegable">
+                    <ul>
+                        <li>TRESemmé</li>
+                        <li>Schwarzkapf</li>
+                        <li>Moroccanoil</li>
+                        <li>Salerm 21</li>
+                        <li>Afro Love</li>
+                        <li>Eco Styling Gel</li>
+                        <li>Boé</li>
+                        <li>Garnier</li>
+                        <li>Professional</li>
+                    </ul>
+                </div>
+            </li>
             <li><a href="">Discover</a></li>
             <li><a href="">Vegan</a></li>
             <li><a href="">Shampoo</a></li>
@@ -24,7 +38,7 @@
             <li><a href="">Treatment</a></li>
             <li><a href="">Leave-in</a></li>
             <li><a href="">Styling</a></li>
-            <li><img src="https://gallery.yopriceville.com/var/albums/Free-Clipart-Pictures/Sale-Stickers-PNG/Shopping_Cart_Icon_PNG_Clipart.png?m=1629814077" alt="">
+            <li><img class="cart" src="https://gallery.yopriceville.com/var/albums/Free-Clipart-Pictures/Sale-Stickers-PNG/Shopping_Cart_Icon_PNG_Clipart.png?m=1629814077" alt="">
             </li>
             <li>
                 <div class="busqueda">
