Add dropdown menu

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <ul class="list-nav">
             <li class="btn-desplegable"><a href="">Top Brands</a>
                 <div class="desplegable">
+                    <div class="triangulo"></div>
                     <ul>
                         <li>TRESemmé</li>
                         <li>Schwarzkapf</li>
@@ -31,14 +32,52 @@
                     </ul>
                 </div>
             </li>
-            <li><a href="">Discover</a></li>
-            <li><a href="">Vegan</a></li>
+            <div class="nav-items-raya"></div>
+            <li class="btn-desplegable"><a href="">Discover</a>
+                <div class="desplegable">
+                    <div class="triangulo"></div>
+                    <ul>
+                        <li>TRESemmé</li>
+                        <li>Schwarzkapf</li>
+                        <li>Moroccanoil</li>
+                        <li>Salerm 21</li>
+                        <li>Afro Love</li>
+                        <li>Eco Styling Gel</li>
+                        <li>Boé</li>
+                        <li>Garnier</li>
+                        <li>Professional</li>
+                    </ul>
+                </div>
+            </li>
+            <div class="nav-items-raya"></div>
+            <li class="btn-desplegable"><a href="">Vegan</a>
+                <div class="desplegable">
+                    <div class="triangulo"></div>
+                    <ul>
+                        <li>TRESemmé</li>
+                        <li>Schwarzkapf</li>
+                        <li>Moroccanoil</li>
+                        <li>Salerm 21</li>
+                        <li>Afro Love</li>
+                        <li>Eco Styling Gel</li>
+                        <li>Boé</li>
+                        <li>Garnier</li>
+                        <li>Professional</li>
+                    </ul>
+                </div>
+            </li>
+            <div class="nav-items-raya"></div>
             <li><a href="">Shampoo</a></li>
+            <div class="nav-items-raya"></div>
             <li><a href="">Conditioner</a></li>
+            <div class="nav-items-raya"></div>
             <li><a href="">Treatment</a></li>
+            <div class="nav-items-raya"></div>
             <li><a href="">Leave-in</a></li>
+            <div class="nav-items-raya"></div>
             <li><a href="">Styling</a></li>
-            <li><img class="cart" src="https://gallery.yopriceville.com/var/albums/Free-Clipart-Pictures/Sale-Stickers-PNG/Shopping_Cart_Icon_PNG_Clipart.png?m=1629814077" alt="">
+            <li>
+                <img class="cart" src="https://cdn-icons-png.flaticon.com/512/3514/3514491.png" alt="">
             </li>
             <li>
                 <div class="busqueda">
