Refactor CSS styles for layout and responsiveness; remove unused HTML file

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
     <nav>
         <!-- Kevin -->
-        <img class="logo" src="https://cdn-icons-png.flaticon.com/512/40/40739.png" alt="">
+        <img class="logo"
+            src="https://i.postimg.cc/qvNvJmvB/Gemini-Generated-Image-4evjg84evjg84evj-removebg-preview.png" alt="">
         <ul class="list-nav">
             <li class="btn-desplegable"><a href="">Top Brands</a>
                 <div class="desplegable">
@@ -81,7 +82,8 @@
             </li>
             <li>
                 <div class="busqueda">
-                    <input type="search"><img class="lupa" src="https://cdn-icons-png.flaticon.com/512/3721/3721746.png" alt="">
+                    <input type="search" placeholder="  Buscar">
+                    <img class="lupa" src="https://cdn-icons-png.flaticon.com/512/3721/3721746.png" alt="">
                 </div>
             </li>
         </ul>
@@ -89,11 +91,177 @@
     </nav>
 
     <section>
-        <!-- Andrea -->
+        <div id="ImagenTitulo">
+            <img id="imgtitulo" src="https://storage.googleapis.com/jonathan-stuff/FP/DIW/titulo.png"
+                alt="Sería la imagen del título">
+        </div>
+
+        <!--Me planteo un carrousel con radio... formulario-->
+        <div id="carrousel">
+
+            <button> </button>
+            <button> </button>
+            <button> </button>
+            <button> </button>
+            <button> </button>
+
+        </div>
+        <div id="father">
+            <div class="item">
+                <div class="card-header">
+                    <h4 class="tituloItem">Sun Cream</h4>
+                    <img class="iconFavorite"
+                        src="https://i.pinimg.com/736x/34/e1/62/34e162b4e226ddbd90b26999e3ee2aea.jpg">
+                </div>
+
+                <div class="card-imagen">
+                    <img class="imgitems" src="https://m.media-amazon.com/images/I/51NEgq8693L._AC_SX569_.jpg">
+                </div>
+
+                <p class="textitoItem">d'Alba</p>
+
+                <!--No pongo div porque no influía en nada-->
+                <p class="precioSinR">15.30 € </p>
+                <h5 class="precio"> 14.90 €</h5>
+
+            </div>
+            <div class="item">
+                <div class="card-header">
+                    <h4 class="tituloItem">Face Cream</h4>
+                    <img class="iconFavorite"
+                        src="https://i.pinimg.com/736x/34/e1/62/34e162b4e226ddbd90b26999e3ee2aea.jpg">
+                </div>
+
+                <div class="card-imagen">
+                    <img class="imgitems" src="https://m.media-amazon.com/images/I/51IZvGazvCL._AC_SX679_.jpg">
+                </div>
+
+                <p class="textitoItem">Daviness</p>
+                <p class="precioSinR">32.50 €</p>
+                <h5 class="precio"> 30.00 €</h5>
+
+            </div>
+            <div class="item">
+                <div class="card-header">
+                    <h4 class="tituloItem">Day Cream</h4>
+                    <img class="iconFavorite"
+                        src="https://i.pinimg.com/736x/34/e1/62/34e162b4e226ddbd90b26999e3ee2aea.jpg">
+                </div>
+
+                <div class="card-imagen">
+                    <img class="imgitems"
+                        src="https://m.media-amazon.com/images/I/41dqkKSbTCL._AC_UF480,480_SR480,480_.jpg">
+                </div>
+                <p class="textitoItem">Vichy</p>
+                <p class="precioSinR">35.50 €</p>
+                <h5 class="precio"> 30.50 €</h5>
+            </div>
+            <div class="item">
+                <div class="card-header">
+                    <h4 class="tituloItem">Midnight C.</h4>
+                    <img class="iconFavorite"
+                        src="https://i.pinimg.com/736x/34/e1/62/34e162b4e226ddbd90b26999e3ee2aea.jpg">
+                </div>
+                <div class="card-imagen">
+                    <img class="imgitems" src="https://m.media-amazon.com/images/I/51N2wlBcg6L._SX522_.jpg">
+                </div>
+
+                <p class="textitoItem">Elemis</p>
+                <p class="precioSinR">13.70 €</p>
+                <h5 class="precio"> 9.90 €</h5>
+            </div>
+            <div class="item">
+                <div class="card-header">
+                    <h4 class="tituloItem">G.Night C. </h4>
+                    <img class="iconFavorite"
+                        src="https://i.pinimg.com/736x/34/e1/62/34e162b4e226ddbd90b26999e3ee2aea.jpg">
+                </div>
+                <div class="card-imagen">
+                    <img class="imgitems"
+                        src="https://m.media-amazon.com/images/I/71cDJI42IzL._AC_UF480,480_SR480,480_.jpg">
+                </div>
+                <p class="textitoItem">MickoFungus</p>
+                <p class="precioSinR">25.40 €</p>
+                <h5 class="precio"> 19.00 €</h5>
+            </div>
+
+            <div class="item">
+                <div class="card-header">
+                    <h4 class="tituloItem">G.Night C. </h4>
+                    <img class="iconFavorite"
+                        src="https://i.pinimg.com/736x/34/e1/62/34e162b4e226ddbd90b26999e3ee2aea.jpg">
+                </div>
+                <div class="card-imagen">
+                    <img class="imgitems"
+                        src="https://m.media-amazon.com/images/I/71cDJI42IzL._AC_UF480,480_SR480,480_.jpg">
+                </div>
+                <p class="textitoItem">MickoFungus</p>
+                <p class="precioSinR">25.40 €</p>
+                <h5 class="precio"> 19.00 €</h5>
+            </div>
+            <div class="item">
+                <div class="card-header">
+                    <h4 class="tituloItem">G.Night C. </h4>
+                    <img class="iconFavorite"
+                        src="https://i.pinimg.com/736x/34/e1/62/34e162b4e226ddbd90b26999e3ee2aea.jpg">
+                </div>
+                <div class="card-imagen">
+                    <img class="imgitems"
+                        src="https://m.media-amazon.com/images/I/71cDJI42IzL._AC_UF480,480_SR480,480_.jpg">
+                </div>
+                <p class="textitoItem">MickoFungus</p>
+                <p class="precioSinR">25.40 €</p>
+                <h5 class="precio"> 19.00 €</h5>
+            </div>
+            <div class="item">
+                <div class="card-header">
+                    <h4 class="tituloItem">G.Night C. </h4>
+                    <img class="iconFavorite"
+                        src="https://i.pinimg.com/736x/34/e1/62/34e162b4e226ddbd90b26999e3ee2aea.jpg">
+                </div>
+                <div class="card-imagen">
+                    <img class="imgitems"
+                        src="https://m.media-amazon.com/images/I/71cDJI42IzL._AC_UF480,480_SR480,480_.jpg">
+                </div>
+                <p class="textitoItem">MickoFungus</p>
+                <p class="precioSinR">25.40 €</p>
+                <h5 class="precio"> 19.00 €</h5>
+            </div>
+
+
+
+        </div>
     </section>
 
     <footer>
-        <!-- jonathan -->
+        <div class="col">
+            <div class="two">
+                <a href="#">Privaci policy</a>
+                <a href="#">Shipping Info</a>
+            </div>
+            <div class="two">
+                <a href="#">terms & conditions</a>
+                <a href="#">Return / exchanges</a>
+            </div>
+
+            <div class="two">
+                <a href="#">about</a>
+                <a href="#">contact</a>
+            </div>
+
+        </div>
+        <div class="col">
+            <div class="newsletter">
+                <span>Subscribe to our newsletter</span>
+                <div class="">
+                    <form action="">
+                        <input type="text">
+                        <input type="submit" value="Subscribe">
+
+                    </form>
+                </div>
+            </div>
+        </div>
     </footer>
 
 
